--- a/modules/styles/ext.imageEditor.vars.less
+++ b/modules/styles/ext.imageEditor.vars.less
@@ -1,3 +1,4 @@
+@import "ext.imageEditor.vars";
 /*---------------------------------------*\
    Variables
 \*---------------------------------------*/
@@ -18,6 +19,7 @@
 @bs: 16;
 // Base Line height
 @lh: 10;
+@radius: 2px;
 
 // Responsive breakpoints
 @screen_mobile: 480px;
@@ -122,6 +124,7 @@ Roboto
   color: @black;
   border: none;
   border-bottom: @border 1px solid;
+  float: left;
   &:extend(.transition);
   &:focus,&:active,&:hover{
     border-bottom: @blue 1px solid;
@@ -139,14 +142,19 @@ Roboto
   color: @black;
   &:extend(.transition);
   &:hover,
-  &:active,
   &:focus{
     text-decoration: none;
     color: lighten(@black, 50%);
+    cursor: pointer;
   }
   &.active{
     color: @blue;
   }
+  > span{
+    margin-left: 5px;
+    font-size: 11px;
+    background: rgba(0,0,0,0.1);
+    padding: 2px 5px;  }
 }
 .ul_reset {
   margin: 0;
@@ -169,4 +177,11 @@ Roboto
   -ms-transition: ease-in-out all 0.2s;
   -o-transition: ease-in-out all 0.2s;
   transition: ease-in-out all 0.2s;
+}
+
+.shadow-box{
+  -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.08);
+  -moz-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.08);
+  border: @border solid 1px;
 }
