--- a/modules/styles/ext.imageEditor.less
+++ b/modules/styles/ext.imageEditor.less
@@ -7,6 +7,10 @@
   ul{
     &:extend(.ul_reset);
   }
+  &__container{
+    position: relative;
+  }
+
 
   &__info,&__tools,&__options{
     text-align: center;
@@ -17,6 +21,7 @@
 
   &__panel{
     &__horizontal, &__vertical{
+      position: relative;
       opacity: 0.8;
       display: inline-block;
       background: @white;
@@ -43,7 +48,7 @@
       }
     }
   }
-  &__playground{
+  &__playground, &__preloader{
     position: relative;
     width: 100%;
     height:  calc(~"100vh - 250px");
@@ -210,6 +215,7 @@
       }
     }
     &__list{
+      z-index: 3;
       visibility: hidden;
       opacity: 0;
       &:extend(.transition all);
@@ -238,9 +244,72 @@
   &__collaborators{
     padding-left: @offset-lg;
     display: inline-block;
+
     a{
       min-width: @offset-xs;
       margin-left: 0;
     }
   }
+  &__messenger{
+    &:extend(.transition all);
+    width: 100%;
+    overflow: hidden;
+    height: 0;
+    //visibility: hidden;
+    opacity: 0;
+    &.active{
+      &:extend(.transition all);
+      height: 100%;
+      //visibility: visible;
+      opacity: 1;
+    }
+    &__messages{
+      max-height: 200px;
+      overflow-y: auto;
+
+    }
+    &__item{
+      text-align: left;
+      margin: @offset-xs 0;
+      padding: @offset-xs;
+      border: 1px solid @blue;
+      border-radius: @radius;
+      &__head{
+        font-size: 10px;
+      }
+      &__content{
+
+      }
+      &.system_message{
+        opacity: 0.7;
+        border-color: @border;
+      }
+
+    }
+    &__controll{
+      width: 100%;
+      margin: @offset-xs 0;
+      padding: @offset-xs 0;
+      border-top: solid @border 3px;
+      input{
+        &:extend(.input all);
+        width: calc(~"100% - 50px");
+        min-height: 32px;
+        height: auto;
+        //border-radius: @radius;
+        //border: solid @border 1px;
+        font-size: 14px;
+        margin: 0;
+      }
+      a{
+        width: 30px;
+        background-color: @blue;
+        border: @border 1px solid;
+        border-radius: @radius;
+        color: @white;
+      }
+    }
+
+  }
+
 }
