Added support for: import image to canvas, triangle tool, eclipse tool, polygon tool, brush options. Changed layout of options panels, etc...

--- a/modules/styles/ext.imageEditor.vars.less
+++ b/modules/styles/ext.imageEditor.vars.less
@@ -207,16 +207,16 @@ Roboto
 }
 
 .text-primary{
-color: @blue;
+color: @blue !important;
 }
 .text-danger{
-color: @red;
+color: @red !important;;
 }
 .text-success{
-color: @success;
+color: @success !important;;
 }
 .text-white{
-color: @white;
+color: @white !important;;
 }
 
 .btn-primary{
