refractored code, imports moved to extension.json, added socket, canvas, mw variables to scope of controller

--- a/modules/assets/image-editor-icons/ie7/ie7.css
+++ b/modules/assets/image-editor-icons/ie7/ie7.css
@@ -67,7 +67,7 @@
 .icon-ungroup {
   *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe915;');
 }
-.icon-group {
+.icon-group2 {
   *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe916;');
 }
 .icon-point {
@@ -138,6 +138,12 @@
 }
 .icon-oval {
   *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe92d;');
+}
+.icon-group {
+  *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe93b;');
+}
+.icon-users {
+  *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe93b;');
 }
 .icon-user-circle-o {
   *zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe92e;');
