--- a/modules/styles/ext.imageEditor.icons.less
+++ b/modules/styles/ext.imageEditor.icons.less
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'image-editor-icons';
-  src:  url('@{icomoon-font-path}/image-editor-icons.eot?8l6b4r');
-  src:  url('@{icomoon-font-path}/image-editor-icons.eot?8l6b4r#iefix') format('embedded-opentype'),
-    url('@{icomoon-font-path}/image-editor-icons.ttf?8l6b4r') format('truetype'),
-    url('@{icomoon-font-path}/image-editor-icons.woff?8l6b4r') format('woff'),
-    url('@{icomoon-font-path}/image-editor-icons.svg?8l6b4r#image-editor-icons') format('svg');
+  src: url('@{icomoon-font-path}/image-editor-icons.eot?8l6b4r');
+  src: url('@{icomoon-font-path}/image-editor-icons.eot?8l6b4r#iefix') format('embedded-opentype'),
+  url('@{icomoon-font-path}/image-editor-icons.ttf?8l6b4r') format('truetype'),
+  url('@{icomoon-font-path}/image-editor-icons.woff?8l6b4r') format('woff'),
+  url('@{icomoon-font-path}/image-editor-icons.svg?8l6b4r#image-editor-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -20,7 +20,6 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-  text-decoration: none;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
@@ -29,667 +28,805 @@
 
 .icon-send {
   &:before {
-    content: @icon-send; 
+    content: @icon-send;
   }
 }
+
 .icon-path-point {
   &:before {
-    content: @icon-path-point; 
+    content: @icon-path-point;
   }
 }
+
 .icon-pen-minus {
   &:before {
-    content: @icon-pen-minus; 
+    content: @icon-pen-minus;
   }
 }
+
 .icon-anchor {
   &:before {
-    content: @icon-anchor; 
+    content: @icon-anchor;
   }
 }
+
 .icon-vertical-distribute-center {
   &:before {
-    content: @icon-vertical-distribute-center; 
+    content: @icon-vertical-distribute-center;
   }
 }
+
 .icon-link {
   &:before {
-    content: @icon-link; 
+    content: @icon-link;
   }
 }
+
 .icon-horizontal-distribute-right {
   &:before {
-    content: @icon-horizontal-distribute-right; 
+    content: @icon-horizontal-distribute-right;
   }
 }
+
 .icon-vertical-distribute-bottom {
   &:before {
-    content: @icon-vertical-distribute-bottom; 
+    content: @icon-vertical-distribute-bottom;
   }
 }
+
 .icon-vertical-distribute-top {
   &:before {
-    content: @icon-vertical-distribute-top; 
+    content: @icon-vertical-distribute-top;
   }
 }
+
 .icon-horizontal-distribute-left {
   &:before {
-    content: @icon-horizontal-distribute-left; 
+    content: @icon-horizontal-distribute-left;
   }
 }
+
 .icon-horizontal-distribute-center {
   &:before {
-    content: @icon-horizontal-distribute-center; 
+    content: @icon-horizontal-distribute-center;
   }
 }
+
 .icon-vertical-align-top {
   &:before {
-    content: @icon-vertical-align-top; 
+    content: @icon-vertical-align-top;
   }
 }
+
 .icon-vertical-align-bottom {
   &:before {
-    content: @icon-vertical-align-bottom; 
+    content: @icon-vertical-align-bottom;
   }
 }
+
 .icon-vertical-align-center {
   &:before {
-    content: @icon-vertical-align-center; 
+    content: @icon-vertical-align-center;
   }
 }
+
 .icon-horizontal-align-right {
   &:before {
-    content: @icon-horizontal-align-right; 
+    content: @icon-horizontal-align-right;
   }
 }
+
 .icon-horizontal-align-left {
   &:before {
-    content: @icon-horizontal-align-left; 
+    content: @icon-horizontal-align-left;
   }
 }
+
 .icon-horizontal-align-center {
   &:before {
-    content: @icon-horizontal-align-center; 
+    content: @icon-horizontal-align-center;
   }
 }
+
 .icon-flip-horizontal {
   &:before {
-    content: @icon-flip-horizontal; 
+    content: @icon-flip-horizontal;
   }
 }
+
 .icon-rotate-right {
   &:before {
-    content: @icon-rotate-right; 
+    content: @icon-rotate-right;
   }
 }
+
 .icon-rotate-left {
   &:before {
-    content: @icon-rotate-left; 
+    content: @icon-rotate-left;
   }
 }
+
 .icon-flip-vertical {
   &:before {
-    content: @icon-flip-vertical; 
+    content: @icon-flip-vertical;
   }
 }
+
 .icon-objects-minus {
   &:before {
-    content: @icon-objects-minus; 
+    content: @icon-objects-minus;
   }
 }
+
 .icon-ungroup {
   &:before {
-    content: @icon-ungroup; 
+    content: @icon-ungroup;
   }
 }
+
 .icon-group {
   &:before {
-    content: @icon-group; 
+    content: @icon-group;
   }
 }
+
 .icon-point {
   &:before {
-    content: @icon-point; 
+    content: @icon-point;
   }
 }
+
 .icon-pen3 {
   &:before {
-    content: @icon-pen3; 
+    content: @icon-pen3;
   }
 }
+
 .icon-cut {
   &:before {
-    content: @icon-cut; 
+    content: @icon-cut;
   }
 }
+
 .icon-shapes {
   &:before {
-    content: @icon-shapes; 
+    content: @icon-shapes;
   }
 }
+
 .icon-pencil {
   &:before {
-    content: @icon-pencil; 
+    content: @icon-pencil;
   }
 }
+
 .icon-brush {
   &:before {
-    content: @icon-brush; 
+    content: @icon-brush;
   }
 }
+
 .icon-pen {
   &:before {
-    content: @icon-pen; 
+    content: @icon-pen;
   }
 }
+
 .icon-objects-divide {
   &:before {
-    content: @icon-objects-divide; 
+    content: @icon-objects-divide;
   }
 }
+
 .icon-paint-palette {
   &:before {
-    content: @icon-paint-palette; 
+    content: @icon-paint-palette;
   }
 }
+
 .icon-spray {
   &:before {
-    content: @icon-spray; 
+    content: @icon-spray;
   }
 }
+
 .icon-objects-minus-2 {
   &:before {
-    content: @icon-objects-minus-2; 
+    content: @icon-objects-minus-2;
   }
 }
+
 .icon-objects-interserct {
   &:before {
-    content: @icon-objects-interserct; 
+    content: @icon-objects-interserct;
   }
 }
+
 .icon-eyedropper {
   &:before {
-    content: @icon-eyedropper; 
+    content: @icon-eyedropper;
   }
 }
+
 .icon-vector {
   &:before {
-    content: @icon-vector; 
+    content: @icon-vector;
   }
 }
+
 .icon-distort {
   &:before {
-    content: @icon-distort; 
+    content: @icon-distort;
   }
 }
+
 .icon-select {
   &:before {
-    content: @icon-select; 
+    content: @icon-select;
   }
 }
+
 .icon-square-rounded {
   &:before {
-    content: @icon-square-rounded; 
+    content: @icon-square-rounded;
   }
 }
+
 .icon-ruler-1 {
   &:before {
-    content: @icon-ruler-1; 
+    content: @icon-ruler-1;
   }
 }
+
 .icon-ruler {
   &:before {
-    content: @icon-ruler; 
+    content: @icon-ruler;
   }
 }
+
 .icon-polygon {
   &:before {
-    content: @icon-polygon; 
+    content: @icon-polygon;
   }
 }
+
 .icon-square {
   &:before {
-    content: @icon-square; 
+    content: @icon-square;
   }
 }
+
 .icon-triangle {
   &:before {
-    content: @icon-triangle; 
+    content: @icon-triangle;
   }
 }
+
 .icon-oval {
   &:before {
-    content: @icon-oval; 
+    content: @icon-oval;
   }
 }
+
+.icon-users {
+  &:before {
+    content: @icon-users;
+  }
+}
+
 .icon-user-circle-o {
   &:before {
-    content: @icon-user-circle-o; 
+    content: @icon-user-circle-o;
   }
 }
+
 .icon-pencil2 {
   &:before {
-    content: @icon-pencil2; 
+    content: @icon-pencil2;
   }
 }
+
 .icon-pen2 {
   &:before {
-    content: @icon-pen2; 
+    content: @icon-pen2;
   }
 }
+
 .icon-eyedropper2 {
   &:before {
-    content: @icon-eyedropper2; 
+    content: @icon-eyedropper2;
   }
 }
+
 .icon-droplet {
   &:before {
-    content: @icon-droplet; 
+    content: @icon-droplet;
   }
 }
+
 .icon-image {
   &:before {
-    content: @icon-image; 
+    content: @icon-image;
   }
 }
+
 .icon-camera {
   &:before {
-    content: @icon-camera; 
+    content: @icon-camera;
   }
 }
+
 .icon-stack {
   &:before {
-    content: @icon-stack; 
+    content: @icon-stack;
   }
 }
+
 .icon-folder {
   &:before {
-    content: @icon-folder; 
+    content: @icon-folder;
   }
 }
+
 .icon-folder-open {
   &:before {
-    content: @icon-folder-open; 
+    content: @icon-folder-open;
   }
 }
+
 .icon-folder-plus {
   &:before {
-    content: @icon-folder-plus; 
+    content: @icon-folder-plus;
   }
 }
+
 .icon-folder-minus {
   &:before {
-    content: @icon-folder-minus; 
+    content: @icon-folder-minus;
   }
 }
+
 .icon-pushpin {
   &:before {
-    content: @icon-pushpin; 
+    content: @icon-pushpin;
   }
 }
+
 .icon-printer {
   &:before {
-    content: @icon-printer; 
+    content: @icon-printer;
   }
 }
+
 .icon-download {
   &:before {
-    content: @icon-download; 
+    content: @icon-download;
   }
 }
+
 .icon-upload {
   &:before {
-    content: @icon-upload; 
+    content: @icon-upload;
   }
 }
+
 .icon-floppy-disk {
   &:before {
-    content: @icon-floppy-disk; 
+    content: @icon-floppy-disk;
   }
 }
+
 .icon-undo {
   &:before {
-    content: @icon-undo; 
+    content: @icon-undo;
   }
 }
+
 .icon-redo {
   &:before {
-    content: @icon-redo; 
+    content: @icon-redo;
   }
 }
+
 .icon-bubbles2 {
   &:before {
-    content: @icon-bubbles2; 
+    content: @icon-bubbles2;
   }
 }
+
 .icon-spinner8 {
   &:before {
-    content: @icon-spinner8; 
+    content: @icon-spinner8;
   }
 }
+
 .icon-search {
   &:before {
-    content: @icon-search; 
+    content: @icon-search;
   }
 }
+
 .icon-zoom-in {
   &:before {
-    content: @icon-zoom-in; 
+    content: @icon-zoom-in;
   }
 }
+
 .icon-zoom-out {
   &:before {
-    content: @icon-zoom-out; 
+    content: @icon-zoom-out;
   }
 }
+
 .icon-enlarge {
   &:before {
-    content: @icon-enlarge; 
+    content: @icon-enlarge;
   }
 }
+
 .icon-shrink {
   &:before {
-    content: @icon-shrink; 
+    content: @icon-shrink;
   }
 }
+
 .icon-lock {
   &:before {
-    content: @icon-lock; 
+    content: @icon-lock;
   }
 }
+
 .icon-unlocked {
   &:before {
-    content: @icon-unlocked; 
+    content: @icon-unlocked;
   }
 }
+
 .icon-wrench {
   &:before {
-    content: @icon-wrench; 
+    content: @icon-wrench;
   }
 }
+
 .icon-settings {
   &:before {
-    content: @icon-settings; 
+    content: @icon-settings;
   }
 }
+
 .icon-cog {
   &:before {
-    content: @icon-cog; 
+    content: @icon-cog;
   }
 }
+
 .icon-magic-wand {
   &:before {
-    content: @icon-magic-wand; 
+    content: @icon-magic-wand;
   }
 }
+
 .icon-trash {
   &:before {
-    content: @icon-trash; 
+    content: @icon-trash;
   }
 }
+
 .icon-target {
   &:before {
-    content: @icon-target; 
+    content: @icon-target;
   }
 }
+
 .icon-switch {
   &:before {
-    content: @icon-switch; 
+    content: @icon-switch;
   }
 }
+
 .icon-eye {
   &:before {
-    content: @icon-eye; 
+    content: @icon-eye;
   }
 }
+
 .icon-eye-blocked {
   &:before {
-    content: @icon-eye-blocked; 
+    content: @icon-eye-blocked;
   }
 }
+
 .icon-contrast {
   &:before {
-    content: @icon-contrast; 
+    content: @icon-contrast;
   }
 }
+
 .icon-brightness-contrast {
   &:before {
-    content: @icon-brightness-contrast; 
+    content: @icon-brightness-contrast;
   }
 }
+
 .icon-star-empty {
   &:before {
-    content: @icon-star-empty; 
+    content: @icon-star-empty;
   }
 }
+
 .icon-circle-notification {
   &:before {
-    content: @icon-circle-notification; 
+    content: @icon-circle-notification;
   }
 }
+
 .icon-circle-question {
   &:before {
-    content: @icon-circle-question; 
+    content: @icon-circle-question;
   }
 }
+
 .icon-circle-cancel {
   &:before {
-    content: @icon-circle-cancel; 
+    content: @icon-circle-cancel;
   }
 }
+
 .icon-circle-blocked {
   &:before {
-    content: @icon-circle-blocked; 
+    content: @icon-circle-blocked;
   }
 }
+
 .icon-cross {
   &:before {
-    content: @icon-cross; 
+    content: @icon-cross;
   }
 }
+
 .icon-checkmark {
   &:before {
-    content: @icon-checkmark; 
+    content: @icon-checkmark;
   }
 }
+
 .icon-loop2 {
   &:before {
-    content: @icon-loop2; 
+    content: @icon-loop2;
   }
 }
+
 .icon-circle-up {
   &:before {
-    content: @icon-circle-up; 
+    content: @icon-circle-up;
   }
 }
+
 .icon-circle-right {
   &:before {
-    content: @icon-circle-right; 
+    content: @icon-circle-right;
   }
 }
+
 .icon-circle-down {
   &:before {
-    content: @icon-circle-down; 
+    content: @icon-circle-down;
   }
 }
+
 .icon-circle-left {
   &:before {
-    content: @icon-circle-left; 
+    content: @icon-circle-left;
   }
 }
+
 .icon-move-up {
   &:before {
-    content: @icon-move-up; 
+    content: @icon-move-up;
   }
 }
+
 .icon-move-down {
   &:before {
-    content: @icon-move-down; 
+    content: @icon-move-down;
   }
 }
+
 .icon-sort-amount-asc {
   &:before {
-    content: @icon-sort-amount-asc; 
+    content: @icon-sort-amount-asc;
   }
 }
+
 .icon-sort-amount-desc {
   &:before {
-    content: @icon-sort-amount-desc; 
+    content: @icon-sort-amount-desc;
   }
 }
+
 .icon-checkbox-checked {
   &:before {
-    content: @icon-checkbox-checked; 
+    content: @icon-checkbox-checked;
   }
 }
+
 .icon-checkbox-unchecked {
   &:before {
-    content: @icon-checkbox-unchecked; 
+    content: @icon-checkbox-unchecked;
   }
 }
+
 .icon-radio-checked {
   &:before {
-    content: @icon-radio-checked; 
+    content: @icon-radio-checked;
   }
 }
+
 .icon-radio-unchecked {
   &:before {
-    content: @icon-radio-unchecked; 
+    content: @icon-radio-unchecked;
   }
 }
+
 .icon-crop {
   &:before {
-    content: @icon-crop; 
+    content: @icon-crop;
   }
 }
+
 .icon-scissors {
   &:before {
-    content: @icon-scissors; 
+    content: @icon-scissors;
   }
 }
+
 .icon-ligature2 {
   &:before {
-    content: @icon-ligature2; 
+    content: @icon-ligature2;
   }
 }
+
 .icon-text-height {
   &:before {
-    content: @icon-text-height; 
+    content: @icon-text-height;
   }
 }
+
 .icon-text-width {
   &:before {
-    content: @icon-text-width; 
+    content: @icon-text-width;
   }
 }
+
 .icon-font-size {
   &:before {
-    content: @icon-font-size; 
+    content: @icon-font-size;
   }
 }
+
 .icon-bold {
   &:before {
-    content: @icon-bold; 
+    content: @icon-bold;
   }
 }
+
 .icon-underline {
   &:before {
-    content: @icon-underline; 
+    content: @icon-underline;
   }
 }
+
 .icon-italic {
   &:before {
-    content: @icon-italic; 
+    content: @icon-italic;
   }
 }
+
 .icon-strikethrough {
   &:before {
-    content: @icon-strikethrough; 
+    content: @icon-strikethrough;
   }
 }
+
 .icon-omega {
   &:before {
-    content: @icon-omega; 
+    content: @icon-omega;
   }
 }
+
 .icon-sigma {
   &:before {
-    content: @icon-sigma; 
+    content: @icon-sigma;
   }
 }
+
 .icon-page-break {
   &:before {
-    content: @icon-page-break; 
+    content: @icon-page-break;
   }
 }
+
 .icon-superscript {
   &:before {
-    content: @icon-superscript; 
+    content: @icon-superscript;
   }
 }
+
 .icon-subscript {
   &:before {
-    content: @icon-subscript; 
+    content: @icon-subscript;
   }
 }
+
 .icon-text-color {
   &:before {
-    content: @icon-text-color; 
+    content: @icon-text-color;
   }
 }
+
 .icon-clear-formatting {
   &:before {
-    content: @icon-clear-formatting; 
+    content: @icon-clear-formatting;
   }
 }
+
 .icon-table2 {
   &:before {
-    content: @icon-table2; 
+    content: @icon-table2;
   }
 }
+
 .icon-paragraph-left {
   &:before {
-    content: @icon-paragraph-left; 
+    content: @icon-paragraph-left;
   }
 }
+
 .icon-paragraph-center {
   &:before {
-    content: @icon-paragraph-center; 
+    content: @icon-paragraph-center;
   }
 }
+
 .icon-paragraph-right {
   &:before {
-    content: @icon-paragraph-right; 
+    content: @icon-paragraph-right;
   }
 }
+
 .icon-paragraph-justify {
   &:before {
-    content: @icon-paragraph-justify; 
+    content: @icon-paragraph-justify;
   }
 }
+
 .icon-indent-increase {
   &:before {
-    content: @icon-indent-increase; 
+    content: @icon-indent-increase;
   }
 }
+
 .icon-indent-decrease {
   &:before {
-    content: @icon-indent-decrease; 
+    content: @icon-indent-decrease;
   }
 }
+
 .icon-share {
   &:before {
-    content: @icon-share; 
+    content: @icon-share;
   }
 }
+
 .icon-code {
   &:before {
-    content: @icon-code; 
+    content: @icon-code;
   }
 }
+
 .icon-share2 {
   &:before {
-    content: @icon-share2; 
+    content: @icon-share2;
   }
 }
 
