--- a/modules/styles/style.less
+++ b/modules/styles/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'image-editor-icons';
-  src:  url('@{icomoon-font-path}/image-editor-icons.eot?5t95xo');
-  src:  url('@{icomoon-font-path}/image-editor-icons.eot?5t95xo#iefix') format('embedded-opentype'),
-    url('@{icomoon-font-path}/image-editor-icons.ttf?5t95xo') format('truetype'),
-    url('@{icomoon-font-path}/image-editor-icons.woff?5t95xo') format('woff'),
-    url('@{icomoon-font-path}/image-editor-icons.svg?5t95xo#image-editor-icons') format('svg');
+  src:  url('@{icomoon-font-path}/image-editor-icons.eot?8l6b4r');
+  src:  url('@{icomoon-font-path}/image-editor-icons.eot?8l6b4r#iefix') format('embedded-opentype'),
+    url('@{icomoon-font-path}/image-editor-icons.ttf?8l6b4r') format('truetype'),
+    url('@{icomoon-font-path}/image-editor-icons.woff?8l6b4r') format('woff'),
+    url('@{icomoon-font-path}/image-editor-icons.svg?8l6b4r#image-editor-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -141,9 +141,9 @@
     content: @icon-ungroup; 
   }
 }
-.icon-group2 {
+.icon-group {
   &:before {
-    content: @icon-group2; 
+    content: @icon-group; 
   }
 }
 .icon-point {
@@ -259,16 +259,6 @@
 .icon-oval {
   &:before {
     content: @icon-oval; 
-  }
-}
-.icon-group {
-  &:before {
-    content: @icon-group; 
-  }
-}
-.icon-users {
-  &:before {
-    content: @icon-users; 
   }
 }
 .icon-user-circle-o {
