--- a/modules/styles/variables.less
+++ b/modules/styles/variables.less
@@ -23,7 +23,7 @@
 @icon-flip-vertical: "\e913";
 @icon-objects-minus: "\e914";
 @icon-ungroup: "\e915";
-@icon-group2: "\e916";
+@icon-group: "\e916";
 @icon-point: "\e917";
 @icon-pen3: "\e918";
 @icon-cut: "\e919";
@@ -47,8 +47,6 @@
 @icon-square: "\e92b";
 @icon-triangle: "\e92c";
 @icon-oval: "\e92d";
-@icon-group: "\e93b";
-@icon-users: "\e93b";
 @icon-user-circle-o: "\e92e";
 @icon-pencil2: "\e92f";
 @icon-pen2: "\e930";
