--- a/modules/styles/ext.imageEditor.icons.variables.less
+++ b/modules/styles/ext.imageEditor.icons.variables.less
@@ -47,6 +47,7 @@
 @icon-square: "\e92b";
 @icon-triangle: "\e92c";
 @icon-oval: "\e92d";
+@icon-users: "\e93b";
 @icon-user-circle-o: "\e92e";
 @icon-pencil2: "\e92f";
 @icon-pen2: "\e930";
@@ -133,4 +134,6 @@
 @icon-share: "\ea7d";
 @icon-code: "\ea80";
 @icon-share2: "\ea82";
+
+
 
