--- a/modules/styles/ext.imageEditor.vars.less
+++ b/modules/styles/ext.imageEditor.vars.less
@@ -218,6 +218,20 @@ Roboto
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.08);
   border: @border solid 1px;
 }
+.blur{
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+.sharp{
+  -webkit-filter: blur(0);
+  -moz-filter: blur(0);
+  -o-filter: blur(0);
+  -ms-filter: blur(0);
+  filter: blur(0);
+}
 
 .text-primary {
   color: @blue !important;
